# dcp

./: CONTRIBUTING.md  LICENSE  README.md  customization-guide.md  specification.md
dcp-mcp/: .env.example  .gitignore  README.md  pyproject.toml
dcp-mcp/dcp_mcp/: __init__.py  __main__.py  config.py  parser.py  resources.py  server.py  store.py  tools.py
dcp-mcp/tests/: conftest.py  test_tools.py
examples/: before-after.md
templates/: compliance-audit.md  contract-review.md  dpa.md  executive-brief.md  incident-report.md  legal-memo.md  nda.md  policy-document.md  privacy-review.md  project-proposal.md  rfp-response.md  technical-spec.md  vendor-assessment.md
templates/word/: contract-review.docx  executive-brief.docx  incident-report.docx  nda.docx  technical-spec.docx
tools/: validate-dcp.py
